# cli

./: .gitignore  .tool-versions  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  install.ps1  install.sh  renovate.json
.github/workflows/: release.yaml  summary.yaml  tests.yaml  upload-installer.yaml
npm/: cli.js  install.js  package.json  postinstall.js
skills/apitally-cli/: SKILL.md
skills/apitally-cli/references/: commands.md  duckdb_json_functions.md  duckdb_tables.md  tables.md
src/: apps.rs  auth.rs  consumers.rs  endpoints.rs  main.rs  metrics.rs  request_details.rs  request_logs.rs  reset_db.rs  sql.rs  utils.rs  whoami.rs
