[package]
name = "apitally"
version = "0.0.0"
edition = "2024"
description = "Apitally CLI"
license = "MIT"

[dependencies]
anyhow = "1"
arrow = { version = "=58.1.0", default-features = false, features = [
    "ipc",
    "json",
    "chrono-tz",
] }
arrow-ipc = { version = "=58.1.0", features = ["lz4"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
duckdb = { version = "=1.10501.0", features = ["bundled", "appender-arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
