[package]
name = "apitally"
version = "0.0.0"
edition = "2024"
description = "Apitally CLI"
license = "MIT"

[dependencies]
anyhow = "1"
arrow = { version = "=58.1.0", default-features = false, features = [
    "ipc",
    "json",
    "chrono-tz",
] }
arrow-ipc = { version = "=58.1.0", features = ["lz4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
duckdb = { version = "=1.10502.0", features = ["bundled", "appender-arrow"] }
iana-time-zone = "0.1"
open = "5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
